<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/height5"
        android:paddingBottom="@dimen/height5"
        android:text="@string/order_information"
        android:textColor="@color/blackColor4d"
        android:textSize="12sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_number"
            android:textColor="@color/huiColor66"
            android:layout_weight="0"
            android:textSize="10sp" />

        <!--订单编号-->
        <TextView
            android:id="@+id/ui_order_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin10"
            android:layout_marginEnd="@dimen/margin10"
            android:singleLine="true"
            android:textColor="@color/huiColor66"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/ui_order_number_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/copy"
            android:textColor="@color/baseRedColor"
            android:textSize="10sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:visibility="gone"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_deal_number"
            android:textColor="@color/huiColor66"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/ui_order_deal_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin10"
            android:textSize="10sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_create_time"
            android:textColor="@color/huiColor66"
            android:textSize="10sp" />

        <!--优惠劵-->
        <TextView
            android:id="@+id/ui_order_create_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin10"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_pay_time"
            android:textColor="@color/huiColor66"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/ui_order_pay_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin10"
            android:textSize="10sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ui_order_send_time_view"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_send_time"
            android:textColor="@color/huiColor66"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/ui_order_send_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin10"
            android:textSize="10sp" />

    </LinearLayout>

</LinearLayout>