<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_total_price"
            android:textColor="@color/huiColor66"
            android:textSize="10sp" />

        <!--订单编号-->
        <TextView
            android:id="@+id/ui_order_good_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:singleLine="true"
            android:textColor="@color/huiColor66"
            android:textSize="10sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_postage"
            android:textColor="@color/huiColor66"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/ui_order_total_express"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/margin10"
            android:gravity="end"
            android:textSize="10sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_coupon"
            android:textColor="@color/huiColor66"
            android:textSize="10sp" />

        <!--优惠劵-->
        <TextView
            android:id="@+id/ui_order_coupon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/margin10"
            android:gravity="end"
            android:textSize="10sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:gravity="center_vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_coin"
            android:textColor="@color/huiColor66"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/ui_order_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/margin10"
            android:gravity="end"
            android:textSize="10sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_total_price"
            android:textColor="#0f0f0f"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/ui_order_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/margin10"
            android:gravity="end"
            android:textColor="#c22222"
            android:textSize="12sp" />

    </RelativeLayout>

</LinearLayout>