<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@mipmap/bg_login_top" />

            <include layout="@layout/action_title_view" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-30dp"
            android:background="@mipmap/bg_login"
            android:orientation="vertical"
            android:padding="@dimen/margin30">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/icon_decorate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/icon_decorate" />

                <TextView
                    android:id="@+id/welcome_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/width15"
                    android:layout_marginTop="@dimen/margin10"
                    android:layout_toEndOf="@+id/icon_decorate"
                    android:text="@string/welcome_login"
                    android:textColor="#333333"
                    android:textSize="22sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <!--密码登录-->
            <include
                android:id="@+id/password_view"
                layout="@layout/include_login_pwd" />

            <!--验证码登录-->
            <include
                android:id="@+id/verification_code_view"
                layout="@layout/include_login_verification_code"
                android:visibility="gone" />

            <TextView
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/bg_login_btn"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <TextView
                    android:id="@+id/login_code_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/width15"
                    android:paddingStart="0dp"
                    android:text="@string/verification_code_login"
                    android:textColor="#f12873"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/login_registered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:padding="@dimen/width15"
                    android:paddingEnd="0dp"
                    android:text="@string/register"
                    android:textColor="#f12873"
                    android:textSize="14sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin30"
                android:layout_marginTop="@dimen/margin30"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fast_login"
                    style="@style/_666666_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/margin30"
                    android:drawableEnd="@mipmap/login_line_3f"
                    android:drawablePadding="10dp"
                    android:drawableStart="@mipmap/login_line_3f"
                    android:text="@string/fast_login" />

                <ImageView
                    android:id="@+id/btn_wechat_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fast_login"
                    android:layout_marginStart="100dp"
                    android:contentDescription="@string/fast_login"
                    android:src="@mipmap/icon_login_wechat" />

                <ImageView
                    android:id="@+id/btn_qq_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/fast_login"
                    android:layout_marginEnd="100dp"
                    android:contentDescription="@string/fast_login"
                    android:src="@mipmap/icon_login_qq" />

            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>