<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/height40"
    android:layout_marginTop="@dimen/height40"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageView
            android:id="@+id/icon_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin10"
            android:contentDescription="@string/input_your_account"
            android:src="@mipmap/icon_login_account" />

        <EditText
            android:id="@+id/input_edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/height40"
            android:background="@null"
            android:hint="@string/input_your_account"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:textColor="#999999"
            android:textSize="14sp" />

        <View
            style="@style/ui_line"
            android:layout_height="2dp"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/height20">

        <ImageView
            android:id="@+id/icon_pwd_invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin10"
            android:contentDescription="@string/input_your_password"
            android:src="@mipmap/icon_pwd_invisible" />

        <EditText
            android:id="@+id/input_edit_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/height40"
            android:layout_toStartOf="@+id/forget_psw_text"
            android:background="@null"
            android:digits="@string/input_text"
            android:hint="@string/input_your_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="#999999"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/forget_psw_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical"
            android:paddingEnd="@dimen/margin10"
            android:paddingStart="@dimen/margin10"
            android:text="@string/forget_password"
            android:textColor="#f12873"
            android:textSize="14sp" />

        <View
            style="@style/ui_line"
            android:layout_height="2dp"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>
</LinearLayout>
