<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/height40"
    android:layout_marginTop="@dimen/height40"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin10"
            android:contentDescription="@string/input_your_phone"
            android:src="@mipmap/icon_login_phone" />

        <EditText
            android:id="@+id/input_edit_phoneNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/height40"
            android:background="@null"
            android:hint="@string/input_your_phone"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:textColor="#999999"
            android:textSize="14sp" />

        <View
            style="@style/ui_line"
            android:layout_height="2dp"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/height20">

        <ImageView
            android:id="@+id/icon_verification_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin10"
            android:contentDescription="@string/input_your_verification_code"
            android:src="@mipmap/icon_verification_code" />

        <EditText
            android:id="@+id/input_edit_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/height40"
            android:layout_toStartOf="@+id/obtain_code"
            android:background="@null"
            android:digits="@string/input_text"
            android:hint="@string/input_your_verification_code"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="#999999"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/obtain_code"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical"
            android:paddingEnd="@dimen/margin10"
            android:paddingStart="@dimen/margin10"
            android:text="@string/get_verification_code"
            android:textColor="#f12873"
            android:textSize="14sp" />

        <View
            android:id="@+id/ui_password_line"
            style="@style/ui_line"
            android:layout_height="2dp"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>

</LinearLayout>