<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="@dimen/height20">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/action_phone_86"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@mipmap/right_arrow_grey_s"
            android:drawablePadding="5dp"
            android:paddingBottom="5dp"
            android:text="+86"
            android:textColor="@color/blackColor0f"
            android:textSize="12sp" />

        <!--电话号码输入-->
        <EditText
            android:id="@+id/back_input_edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:digits="1234567890"
            android:hint="请输入手机号"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textColor="@color/huiColor80"
            android:textSize="12sp" />
    </LinearLayout>

    <View style="@style/ui_line" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <!--验证码-->
        <EditText
            android:id="@+id/back_input_edit_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="请输入验证码"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="18"
            android:singleLine="true"
            android:textColor="@color/huiColor80"
            android:textSize="12sp" />

        <!--获取验证码-->
        <TextView
            android:id="@+id/back_huoqu_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@drawable/bg_red_02"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingEnd="@dimen/width15"
            android:paddingStart="@dimen/width15"
            android:paddingTop="5dp"
            android:text="获取验证码"
            android:textColor="@color/whiteColor"
            android:textSize="10sp" />

    </LinearLayout>

    <View style="@style/ui_line" />

    <EditText
        android:id="@+id/back_input_edit_new_psw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/height25"
        android:background="@null"
        android:hint="@string/set_your_password"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:textColor="#999999"
        android:textSize="12sp" />

    <View style="@style/ui_line" />

    <EditText
        android:id="@+id/back_input_edit_enter_psw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/height25"
        android:background="@null"
        android:hint="@string/confirm_your_password"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:textColor="#999999"
        android:textSize="12sp" />

    <View style="@style/ui_line" />

    <TextView
        android:id="@+id/back_btn_fins"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height35"
        android:layout_marginBottom="@dimen/height20"
        android:layout_marginTop="@dimen/height40"
        android:background="@mipmap/bg_squre_border_red"
        android:gravity="center"
        android:text="@string/btn_complete"
        android:textColor="#ffffff"
        android:textSize="18sp" />

</LinearLayout>
